                 classDiagram

%% =====================
%% Inheritance hierarchy
%% =====================

    Product <|-- Ticket
    Product <|-- Publication
    Publication <|-- Book
    Publication <|-- Magazine
    Magazine <|-- DiscMag

%% New electronics sub-hierarchy
    Product <|-- Electronic
    Electronic <|-- Phone
    Electronic <|-- Laptop

%% Interfaces
    SaleableItem <|.. Product
    Serializable <|.. Product

%% Cart relationship
Cart -- "0..*" Product

%% Order relationship
Order -- "0..*" Product

%% Conceptual relationship
Cart ..> Order : creates

%% =====================
%% Core classes
%% =====================

class Product {
-String productId
}

class Serializable {
<<interface>>
}

class SaleableItem {
<<interface>>
+sellItem()
+getPrice()
}

%% =====================
%% Ticket
%% =====================

class Ticket {
+String description
+double price
+sellItem()
+getPrice()
}

%% =====================
%% Publications
%% =====================

class Publication {
<<abstract>>
-String title
-double price
-int copies

+getPrice()
+Publication()
+Publication(String title, double price, int copies)
+toString()
+equals()
+hashCode()
}

class Book {
-String author
+edit()
+initialize()
+sellItem()
}

class Magazine {
-int orderQty
-Date currentIssue

+edit()
+initialize()
+sellItem()
}

class DiscMag {
-boolean hasDisc
+edit()
+initialize()
+sellItem()
}

%% =====================
%% Electronics
%% =====================

class Electronic {
<<abstract>>
- double price
-String serialNumber
- int quantity
+Electronic()
+Electronic(String serialNumber, double price, int quantity)
+getPrice()
+edit()
+initialize()
+sellItem()
+toString()
}

class Phone {
-String carrier
}

class Laptop {
-String storageSize
}

%% =====================
%% Cart
%% =====================

class Cart {
-String cartId
-Set~Product~ products

+Cart()
+addProduct(Product)
+removeProduct(Product)
+getTotal()
}

%% =====================
%% Order
%% =====================

class Order {
-String orderId
-Date orderDate
-double totalAmount
-Set~Product~ products

+Order()
+addProduct(Product)
+getTotal()
}

